apache2 (2.2.11-7) UNRELEASED; urgency=low

  * Add symlinks for the debug info to the mpm packages.

 -- Stefan Fritsch <sf@debian.org>  Sat, 20 Jun 2009 09:52:00 +0200

apache2 (2.2.11-6) unstable; urgency=high

  * CVE-2009-1195: mod_include allowed to bypass IncludesNoExec for Server
    Side Includes (closes: #530834).
  * Fix postinst scripts (closes: #532278).

 -- Stefan Fritsch <sf@debian.org>  Mon, 08 Jun 2009 19:22:58 +0200

apache2 (2.2.11-5) unstable; urgency=low

  * Move all binaries into a new package apache2.2-bin and make
    apache2.2-common depend on it. This allows to
    - run apache as user process only, e.g. with gnome-user-share.
      Closes: #468690
    - run multiple instances of apache with different MPMs. This configuration
      is not supported in any way, though. Closes: #517572
  * Switch to debhelper compatibility level 7 and remove some code duplication
    in debian/rules.
  * Override some Lintian warnings about old autotools helper files and being
    not binNMUable (apache2 is not binNMUable anyway, because of the
    apache2 <-> apache2-mpm-itk dependency).

 -- Stefan Fritsch <sf@debian.org>  Fri, 22 May 2009 19:30:20 +0200

apache2 (2.2.11-4) unstable; urgency=low

  [ Stefan Fritsch ]
  * Disable TRACE method by default (closes: #492130).
  * Compress some more mime types with mod_deflate by default. This may cause
    problems with MSIE 6, but that browser should now be considered obsolete.
    Closes: #397526, #521209
  * Various backports from upstream svn branches/2.2.x:
    - CVE-2009-1191: mod_proxy_ajp: Avoid delivering content from a previous
      request which failed to send a request body
    - Fix FollowSymlinks / SymlinksIfOwnerMatch ignored with
      server-side-includes PR 45959 (closes: #524474)
    - Fix mod_rewrite "B" flag breakage PR 45529 (closes: #524268)
    - Fix mod_deflate etag handling PR 45023 (LP: #358314)
    - Fix mod_ldap segfault if LDAP initialization failed PR 45994