@@ -1,1 +1,4 @@
-<html><body><h1>It works!</h1></body></html>
+<html><body><h1>It works!</h1>
+<p>This is the default web page for this server.</p>
+<p>The web server software is running but no content has been added, yet.</p>
+</body></html>
